--- a/.github/workflows/java-17.yml
+++ b/.github/workflows/java-17.yml
@@ -30,4 +30,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml -DskipTests
+      run: mvn -B package -DskipTests
+    - name: Run Spring Boot
+      run: mvn spring-boot:run
