--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>springboot-images-book-api</finalName>
 	</build>
 
 </project>
