--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      uses: actions/setup-java@v1
+      with:
+      java-version: '17'
+      distribution: 'adopt'
+      cache: maven
+    - name: Build with Maven
+      run: mvn clean install
+      
