--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>3.1.1</version>
+			</plugin>
 		</plugins>
 		<finalName>springboot-images-book-api</finalName>
 	</build>
