--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,13 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Setup Java Version
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'adopt'
         cache: maven
+    
     - name: Build with Maven
       run: mvn clean install -DskipTests
       
