--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
         username: ${{secrets.DOCKERHUB_USERNAME}}
         password: ${{secrets.DOCKERHUB_PASSWORD}}
       run: |
-        docker login -u $username -p $password 
+        docker login -u $username -p $password --password-stdin
     - name: build the docker image
       id: build-docker-image
       run: |
