--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,11 +36,11 @@ jobs:
       id: build-docker-image
       run: |
         ls -la 
-        docker build . -f Dockerfile -t ${{secrets.DOCKERHUB_USERNAME}}/app:latest
+        docker build . -f Dockerfile -t ${{secrets.DOCKERHUB_USERNAME}}:latest
     
     - name: push the docker image
       id: push-docker-image
-      run: docker push ${{secrets.DOCKERHUB_USERNAME}}/app:latest
+      run: docker push ${{secrets.DOCKERHUB_USERNAME}}:latest
 
 
 
