--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,10 +11,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]'):latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+        
 
     - name: Setup Java Version
       uses: actions/setup-java@v4
@@ -35,15 +38,13 @@ jobs:
     - name: build the docker image
       id: build-docker-image
       run: |
-        IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')"
         ls -la 
-        docker build . -f Dockerfile -t $IMAGE_NAME:latest
+        docker build . -f Dockerfile -t $IMAGE_NAME
     
     - name: push the docker image
       id: push-docker-image
       run: |
-        IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')"
-        docker push $IMAGE_NAME:latest
+        docker push $IMAGE_NAME
 
 
 
