--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,9 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')
+      REPOSITORY_NAME : ${{ github.event.repository.name }}
+      USER_DOCKER : ${{ secrets.DOCKERHUB_USERNAME }}
+      IMAGE_NAME: $USER_DOCKER/$(echo $REPOSITORY_NAME | tr '[:upper:]' '[:lower:]')
 
     steps:
     - name: Checkout
