--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-        
+
+    - name: test
+      run: |
+        ls -la 
+        echo $IMAGE_NAME
 
     - name: Setup Java Version
       uses: actions/setup-java@v4
