--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       REPOSITORY_NAME : ${{ github.event.repository.name }} 
       USER_DOCKER : ${{ vars.DOCKERHUB_USERNAME }}
-      IMAGE_NAME: $(echo nalonzo68/${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')
+      IMAGE_NAME: ${{ vars.DOCKERHUB_USERNAME }}/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')
 
     steps:
     - name: Checkout
@@ -46,12 +46,12 @@ jobs:
       run: |
         ls -la 
         echo $IMAGE_NAME
-        docker build . -f Dockerfile -t $IMAGE_NAME:latest
+        docker build . -f Dockerfile -t ${{ vars.DOCKERHUB_USERNAME }}/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]'):latest
     
     - name: push the docker image
       id: push-docker-image
       run: |
-        docker push $IMAGE_NAME:latest
+        docker push ${{ vars.DOCKERHUB_USERNAME }}/$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]'):latest
 
 
 
